--- a/athletesDetails.html
+++ b/athletesDetails.html
@@ -18,8 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html" tabindex="Olympics"><img
-                    src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Olympic_rings_without_rims.svg"
+            <a class="navbar-brand" href="index.html" tabindex="Olympics"><img src="../images/Olympic_rings.svg"
                     height="24" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -28,13 +27,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="athletes.html"><i
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="athletes.html"><i
                                 class="fa fa-user-o text-warning"></i> Athletes</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="competitions.html"><i
                                 class="fa fa-trophy"></i> Competitions</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html"><i
                                 class=" fa fa-flag-o text-danger"></i> Countries</a></li>
-                    <li class="nav-item"><a class="nav-link " aria-current="page" href="games.html"><i
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="games.html"><i
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
@@ -42,75 +41,72 @@
             </div>
         </div>
     </nav>
-    <!-- Working Area -->
+    <!-- Work Area-->
     <div class="container">
-        <div class="border-bottom py-2 mb-2">
-            <h2 data-bind="text:displayName"></h2>
+        <div class="py-2 border-bottom mb-3">
+            <h2 data-bind="text:Name() +' [' + Id() + ']'"></h2>
         </div>
-        <!-- ko if:records().length > 0 -->
-        <div class="row small">
-            <p class=" col-4 mr-auto pt-2">
-                <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
-                <span data-bind="html: 'Games: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
-            </p>
-            <div class="col-8 my-0 pt-3">
-                <ul class="pagination float-end">
-                    <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
-                    <li class="page-item float-end"><a class="page-link" title="First Page"
-                            data-bind="attr: { href: './athletes.html?page=' + '1',  rel:'prev'}">⇤</a></li>
-                    <li class="page-item float-end"><a class="page-link" title="Previous Page"
-                            data-bind="attr: { href: './athletes.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
-                    <!-- /ko -->
-                    <!-- ko foreach: pageArray()-->
-                    <!-- ko if:$data == $parent.currentPage() -->
-                    <li class="active page-item"><a class="page-link"
-                            data-bind="attr: { title:'Current Page ' + $data }, text: $data"></a></li>
-                    <!-- /ko -->
-                    <!-- ko if:$data != $parent.currentPage() -->
-                    <li class="page-item"><a class="page-link"
-                            data-bind="attr: { href: './athletes.html?page=' + $data, title:'Goto Page ' + $data }, text:$data"></a>
-                    </li>
-                    <!-- /ko -->
-                    <!-- /ko -->
-                    <!-- ko if: currentPage() < totalPages() - 4 && totalPages() > 9 -->
-                    <li class="page-item"><a class="page-link" title="Next Page"
-                            data-bind="attr: { href: './athletes.html?page=' + nextPage(), rel:'next' }">→</a></li>
-                    <li class="page-item"><a class="page-link" title="Last Page"
-                            data-bind="attr: { href: './athletes.html?page=' + totalPages() }">⇥</a></li>
-                    <!-- /ko -->
-                </ul>
+        <!-- ko if:Name().length > 0 -->
+        <div class="row border-bottom mx-0 my-1">
+            <div class="col-2">Id</div>
+            <div class="col-10" data-bind="text: Id"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1">
+            <div class="col-2">Name</div>
+            <div class="col-10" data-bind="text: Name"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1">
+            <div class="col-2">Sex</div>
+            <div class="col-10" data-bind="text: Sex"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1" id="Height">
+            <div class="col-2">Height</div>
+            <div class="col-10" data-bind="text: Height() + ' cm'"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1 " id="Weight">
+            <div class="col-2">Weight</div>
+            <div class="col-10" data-bind="text: Weight() + ' Kg'"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1" id="Olympedia">
+            <div class="col-2">Olympedia Link</div>
+            <div class="col-10" data-bind="text: Url"></div>
+        </div>
+
+
+
+
+        <!-- <div class="row border-bottom mx-0  my-1">
+            <div class="col-2">Country Name</div>
+            <div class="col-10" data-bind="text: CountryName"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1">
+            <div class="col-2">Season</div>
+            <div class="col-10" data-bind="text: Season"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1">
+            <div class="col-2">Year</div>
+            <div class="col-10" data-bind="text: Year"></div>
+        </div>
+        <div class="row border-bottom mx-0  my-1" data-bind="visible: Logo() != '' && Logo() != null">
+            <div class="col-2">Logo</div>
+            <div class="small col-10">
+                <img class="img-thumbnail" data-bind="attr:{src: Logo}"><br /><i class="fa fa-link"></i><br />
+                [<a class="link-dark text-decoration-none" data-bind="attr: { href: Logo }, text: Logo"
+                    target="_blank"></a>]
+            </div>
+        </div> -->
+        <div class="row border-bottom mx-0  my-1" data-bind="visible: Photo() != '' && Photo() != null">
+            <div class="col-2">Photo</div>
+            <div class="small col-10">
+                <img class="img-thumbnail" data-bind="attr:{src: Photo}"><br />
+                <i class="fa fa-link"></i> [<a class="link-dark text-decoration-none"
+                    data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>]
             </div>
         </div>
         <!-- /ko -->
-
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Sex</th>
-
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody data-bind="foreach: records">
-                <tr>
-                    <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Sex"></td>
-                    <td class="text-end">
-                        <a class="btn btn-default btn-light btn-xs"
-                            data-bind="attr: { href:'./athletesDetails.html?id=' + Id }">
-                            <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
-                        </a>
-                        <button class="btn btn-default btn-xs">
-                            <i class="fa fa-heart-o" data-bind="attr : { 'id': 'favourite_' + Id }"
-                                title="Selecione para adicionar aos favoritos"></i>
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <a href="./games.html" class="btn btn-default btn-sm small"><i class="fa fa-list"></i> Back to List</a>
+        <a data-bind="attr: { href:'./gameFull.html?id=' + Id() }" class="btn btn-default btn-sm small"><i
+                class="fa fa-th"></i> Full Setails</a>
     </div>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -127,7 +123,7 @@
             </div>
         </div>
     </div>
-    <!-- End of Working Area -->
+    <!-- End of Work Area -->
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <div class="container small">
             <div class="navbar-text">&copy; Introdução as Tecnologias Web - 2022/23</div>
@@ -145,7 +141,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="athletes.js"></script>
+    <script src="athletesDetails.js"></script>
 </body>
 
 </html>
