--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -50,21 +50,11 @@
         <!-- ko if:records().length > 0 -->
         <br>
         <br>
-
+        <h1>tenho que fazer isto ainda (n ta a funcionar)</h1>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
-
-
-
-
-
-
-
-
-
-
 
 
         <br>
