--- a/HTML/index.html
+++ b/HTML/index.html
@@ -68,12 +68,13 @@
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
+                    <li class="nav-item"><button class="nav-link darkToggle">Dark</button></li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- Working Area -->
-    <div id="myCarousel" class="carousel slide carousel-fade mb-5" data-bs-ride="carousel">
+    <div id=" myCarousel" class="carousel slide carousel-fade mb-5" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" aria-label="Slide 1"
                 class="active" aria-current="true"></button>
@@ -85,34 +86,44 @@
             <div class="carousel-item active">
                 <div class="carousel-caption d-none d-md-block">
                     <div class="display-1">Beijing 2008</div>
-                    <p>The 2008 Summer Olympics, officially the Games of the XXIX Olympiad and also known as Beijing
-                        2008, were an international multisport event held from 8 to 24 August 2008, in Beijing, China.
+                    <p>The 2008 Summer Olympics, officially the Games of the XXIX Olympiad and also
+                        known as Beijing
+                        2008, were an international multisport event held from 8 to 24 August 2008,
+                        in Beijing, China.
                     </p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="carousel-caption d-none d-md-block">
                     <div class="display-1">Vancouver 2010</div>
-                    <p>The 2010 Winter Olympics, officially known as the XXI Olympic Winter Games and also known as
-                        Vancouver 2010, were an international winter multi-sport event held from February 12 to 28, 2010
-                        in Vancouver, British Columbia, Canada, with some events held in the surrounding suburbs of
-                        Richmond, West Vancouver and the University of British Columbia, and in the nearby resort town
+                    <p>The 2010 Winter Olympics, officially known as the XXI Olympic Winter Games
+                        and also known as
+                        Vancouver 2010, were an international winter multi-sport event held from
+                        February 12 to 28, 2010
+                        in Vancouver, British Columbia, Canada, with some events held in the
+                        surrounding suburbs of
+                        Richmond, West Vancouver and the University of British Columbia, and in the
+                        nearby resort town
                         of Whistler.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="carousel-caption d-none d-md-block">
                     <div class="display-1">Rio de Janeiro 2016</div>
-                    <p>The 2016 Summer Olympics, officially the Games of the XXXI Olympiad and also known as Rio 2016,
-                        was an international multi-sport event held from 5 to 21 August 2016 in Rio de Janeiro, Brazil.
+                    <p>The 2016 Summer Olympics, officially the Games of the XXXI Olympiad and also
+                        known as Rio 2016,
+                        was an international multi-sport event held from 5 to 21 August 2016 in Rio
+                        de Janeiro, Brazil.
                     </p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="carousel-caption d-none d-md-block">
                     <div class="display-1">Tokio 2020</div>
-                    <p>The 2020 Summer Olympics, officially the Games of the XXXII Olympiad and also known as Tokyo
-                        2020, was an international multi-sport event held from 23 July to 8 August 2021 in Tokyo, Japan.
+                    <p>The 2020 Summer Olympics, officially the Games of the XXXII Olympiad and also
+                        known as Tokyo
+                        2020, was an international multi-sport event held from 23 July to 8 August
+                        2021 in Tokyo, Japan.
                     </p>
                 </div>
             </div>
@@ -133,7 +144,8 @@
             <div class="navbar-text">Made with <i class="fa fa-heart-o text-danger"></i> for U by <a
                     href="mailto:jsp@ua.pt" class="text-decoration-none text-muted">jsp@ua.pt</a>.</div>
             <div class="navbar-nav">
-                <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de Aveiro</a>
+                <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de
+                        Aveiro</a>
                 </div>
             </div>
         </div>
