--- a/HTML/index.html
+++ b/HTML/index.html
@@ -68,6 +68,8 @@
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favoritos.html"><i
+                                class="fa fa-heart-o text-danger"></i> Favorites</a></li>
                     <li class="nav-item"><button class="nav-link darkToggle">Dark</button></li>
                 </ul>
             </div>
