--- a/HTML/gameDetails.html
+++ b/HTML/gameDetails.html
@@ -36,7 +36,9 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="games.html"><i
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
-                                class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
+                                class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>~
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favoritos.html"><i
+                                class="fa fa-heart-o text-danger"></i> Favorites</a></li>
                 </ul>
             </div>
         </div>
