--- a/HTML/countries.html
+++ b/HTML/countries.html
@@ -142,11 +142,11 @@
             <div class="navbar-nav">
                 <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de Aveiro</a>
                 </div>
-                <label class="switch">
-                    <input class="Toggler" type="checkbox">
-                    <span class="slider round"></span>
-                </label>
             </div>
+            <input style="transform:scale(0.5)" type="checkbox" id="toggle" class="toggle--checkbox">
+            <label style="transform:scale(0.5)" for="toggle" class="toggle--label Toggler">
+                <span style="transform:scale(0.5)" class="toggle--label-background"></span>
+            </label>
         </div>
     </nav>
 
