--- a/HTML/modalities.html
+++ b/HTML/modalities.html
@@ -85,33 +85,30 @@
             </div>
         </div>
         <!-- /ko -->
+        <div class="row row-cols-1 row-cols-md-4 g-4" data-bind="foreach: records">
+            <div class="col">
+                <div class="card h-100">
 
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
+                    <img data-bind="attr:{src: Photo}" class="card-img-top cardImage" alt="Image Error" />
 
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody data-bind="foreach: records">
-                <tr>
-                    <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="text-end">
-                        <a class="btn btn-default btn-light btn-xs"
-                            data-bind="attr: { href:'./modalitiesDetails.html?id=' + Id }">
-                            <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
-                        </a>
-                        <button class="btn btn-default btn-xs">
-                            <i class="fa fa-heart-o" data-bind="attr : { 'id': 'favourite_' + Id }"
-                                title="Selecione para adicionar aos favoritos"></i>
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+
+                    <div class="card-body">
+                        <h5 class="card-title" data-bind="text:Name + ' ['+ Id + ']'   "></h5>
+                        <p class=" card-text">
+                            This is a longer card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+        </div>
+
+
     </div>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
