--- a/HTML/athletesDetails.html
+++ b/HTML/athletesDetails.html
@@ -104,8 +104,8 @@
             </div>
         </div>
         <!-- /ko -->
-        <a href="./games.html" class="btn btn-default btn-sm small"><i class="fa fa-list"></i> Back to List</a>
-        <a data-bind="attr: { href:'./gameFull.html?id=' + Id() }" class="btn btn-default btn-sm small"><i
+        <a href="./athletes.html" class="btn btn-default btn-sm small"><i class="fa fa-list"></i> Back to List</a>
+        <a data-bind="attr: { href:'./athletesFull.html?id=' + Id() }" class="btn btn-default btn-sm small"><i
                 class="fa fa-th"></i> Full Setails</a>
     </div>
     <!-- Modal -->
