--- a/HTML/index.html
+++ b/HTML/index.html
@@ -72,7 +72,7 @@
                                 class="fa fa-heart-o text-danger"></i> Favorites</a></li>
                 </ul>
 
-
+                <div class="Toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
 
             </div>
         </div>
