--- a/HTML/competitions.html
+++ b/HTML/competitions.html
@@ -28,9 +28,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="athletes.html"><i
+                    <li class="nav-item"><a class="nav-link " aria-current="page" href="athletes.html"><i
                                 class="fa fa-user-o text-warning"></i> Athletes</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="competitions.html"><i
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="competitions.html"><i
                                 class="fa fa-trophy"></i> Competitions</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html"><i
                                 class=" fa fa-flag-o text-danger"></i> Countries</a></li>
@@ -50,8 +50,8 @@
             <h2 data-bind="text:displayName"></h2>
         </div>
         <!-- ko if:records().length > 0 -->
-        
-        
+
+
 
 
 
@@ -70,7 +70,8 @@
                     <li class="page-item float-end"><a class="page-link" title="First Page"
                             data-bind="attr: { href: './competitions.html?page=' + '1',  rel:'prev'}">⇤</a></li>
                     <li class="page-item float-end"><a class="page-link" title="Previous Page"
-                            data-bind="attr: { href: './competitions.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
+                            data-bind="attr: { href: './competitions.html?page=' + previousPage(),  rel:'prev'}">←</a>
+                    </li>
                     <!-- /ko -->
                     <!-- ko foreach: pageArray()-->
                     <!-- ko if:$data == $parent.currentPage() -->
@@ -111,9 +112,8 @@
                 <tr>
                     <td class="align-middle" data-bind="text:Id"></td>
                     <td class="align-middle" data-bind="text:Name"></td>
-                    <td><img class="competitions-img" 
-                        data-bind="attr:{src: Photo}">
-                </td>
+                    <td><img class="competitions-img" data-bind="attr:{src: Photo}">
+                    </td>
                     <td class="align-middle" data-bind="text:Modality"></td>
                     <td class="align-middle" data-bind="text:Results"></td>
                     <td class="text-end">
