--- a/HTML/modalities.html
+++ b/HTML/modalities.html
@@ -88,17 +88,14 @@
         <div class="row" data-bind=" foreach: records">
             <div class="col-md-3 col-sm-6 col-lg-3" style="margin:0 0 20px 0">
                 <div class="card h-100">
-
                     <img data-bind="attr:{src: Photo}" class="card-img-top cardImage" alt="Image Error" />
-
-
                     <div class="card-body">
                         <h5 class="card-title" data-bind="text:Name + ' ['+ Id + ']'   "></h5>
                         <p class=" card-text">
                             Esta Modalidade é kinda meh
                         </p>
                         <a class="btn btn-default btn-light btn-sm"
-                            data-bind="attr: { href:'./gameDetails.html?id=' + Id }">
+                            data-bind="attr: { href:'./modalitiesDetails.html?id=' + Id }">
                             <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
                         </a>
                         <button class="btn btn-default btn-sm">
