--- a/HTML/competitionsDetails.html
+++ b/HTML/competitionsDetails.html
@@ -46,31 +46,16 @@
         <div class="py-2 border-bottom mb-3">
             <h2 data-bind="text:Name() +' [' + Id() + ']'"></h2>
         </div>
-        <!-- ko if:Name().length > 0 -->
         <div class="row border-bottom mx-0 my-1">
-            <div class="col-2">Id</div>
+            <div class="col-2">Game Id</div>
             <div class="col-10" data-bind="text: Id"></div>
         </div>
         <div class="row border-bottom mx-0  my-1">
             <div class="col-2">Name</div>
             <div class="col-10" data-bind="text: Name"></div>
         </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Modality Id</div>
-            <div class="col-10" data-bind="text: Modalityid"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Modality</div>
-            <div class="col-10" data-bind="text: Modality"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1 " >
-            <div class="col-2">Photo</div>
-            <div class="col-10" data-bind="text: Photo"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Participant</div>
-            <div class="col-10" data-bind="text: Participant"></div>
-        </div>
+
+
 
 
 
@@ -95,25 +80,26 @@
                     target="_blank"></a>]
             </div>
         </div> -->
-    <!-- End of Work Area -->
-    <nav class="navbar navbar-light bg-light fixed-bottom">
-        <div class="container small">
-            <div class="navbar-text">&copy; Introdução as Tecnologias Web - 2022/23</div>
-            <div class="navbar-text">Made with <i class="fa fa-heart-o text-danger"></i> for U by <a
-                    href="mailto:jsp@ua.pt" class="text-decoration-none text-muted">jsp@ua.pt</a>.</div>
-            <div class="navbar-nav">
-                <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de Aveiro</a>
+        <!-- End of Work Area -->
+        <nav class="navbar navbar-light bg-light fixed-bottom">
+            <div class="container small">
+                <div class="navbar-text">&copy; Introdução as Tecnologias Web - 2022/23</div>
+                <div class="navbar-text">Made with <i class="fa fa-heart-o text-danger"></i> for U by <a
+                        href="mailto:jsp@ua.pt" class="text-decoration-none text-muted">jsp@ua.pt</a>.</div>
+                <div class="navbar-nav">
+                    <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de
+                            Aveiro</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
-        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="..\Scripts\competitionsDetails.js"></script>
+        </nav>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+        <script src="..\Scripts\competitionsDetails.js"></script>
 </body>
 
 </html>
