--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -41,6 +41,11 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="favoritos.html"><i
                                 class="fa fa-heart-o text-danger"></i> Favorites</a></li>
                 </ul>
+                <div class="Toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
+                <div class="ui-widget">
+                    <label for="tags">Tags: </label>
+                    <input id="tags">
+                </div>
             </div>
         </div>
     </nav>
@@ -162,9 +167,11 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="..\Scripts\athletes.js"></script>
+
 </body>
 
 </html>
