--- a/HTML/index.html
+++ b/HTML/index.html
@@ -73,6 +73,10 @@
                 </ul>
 
                 <div class="Toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
+                <div class="ui-widget">
+                    <label for="tags">Tags: </label>
+                    <input id="tags">
+                </div>
 
             </div>
         </div>
