--- a/HTML/competitionsDetails.html
+++ b/HTML/competitionsDetails.html
@@ -70,10 +70,32 @@
                     data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>]
             </div>
         </div>
-        <div class="row border-bottom mx-0 my-1">
-            <div class="col-2">Participant</div>
-            <div class="col-10" data-bind="text: Participant">
-        </div>
+        <table class="table table-striped table-sm small">
+            <thead class="bg-dark text-light">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Name</th>
+
+                    <th scope="col" class="text-right"></th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: Participant">
+                <tr>
+                    <td class="align-middle" data-bind="text:Id"></td>
+                    <td class="align-middle" data-bind="text:Name"></td>
+                    <td class="text-end">
+                        <a class="btn btn-default btn-light btn-xs"
+                            data-bind="attr: { href:'./athletesDetails.html?id=' + Id }">
+                            <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
+                        </a>
+                        <button class="btn btn-default btn-xs">
+                            <i class="fa fa-heart-o" data-bind="attr : { 'id': 'favourite_' + Id }"
+                                title="Selecione para adicionar aos favoritos"></i>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
 
 
