Athletes Detials Beginning

--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -51,6 +51,7 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="favoritos.html"><i
                                 class="fa fa-heart-o text-danger"></i> Favorites</a></li>
                 </ul>
+                <div class="Toggler" id="toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
 
             </div>
         </div>
@@ -180,6 +181,7 @@
     <script src="\lib\jquery-ui\dist\jquery-ui.js"></script>
 
 
+    <script src="..\Scripts\myScript.js"></script>
     <script src="..\Scripts\athletes.js"></script>
 </body>
 
