--- a/HTML/athletesDetails.html
+++ b/HTML/athletesDetails.html
@@ -12,6 +12,7 @@
     <link href="\lib\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
     <link href="/lib/font-awesome/dist/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="..\Styles\myCSS.css" />
+
 </head>
 
 <body>
@@ -37,75 +38,80 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                 </ul>
+
             </div>
         </div>
     </nav>
     <!-- Work Area-->
+
+
+
     <div class="container">
+
+        <!-- ko if:Name().length > 0 -->
+
+
         <div class="py-2 border-bottom mb-3">
             <h2 data-bind="text:Name() +' [' + Id() + ']'"></h2>
         </div>
-        <!-- ko if:Name().length > 0 -->
-        <div class="row border-bottom mx-0 my-1">
-            <div class="col-2">Id</div>
-            <div class="col-10" data-bind="text: Id"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Name</div>
-            <div class="col-10" data-bind="text: Name"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Sex</div>
-            <div class="col-10" data-bind="text: Sex"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1" id="Height">
-            <div class="col-2">Height</div>
-            <div class="col-10" data-bind="text: Height() + ' cm'"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1 " id="Weight">
-            <div class="col-2">Weight</div>
-            <div class="col-10" data-bind="text: Weight() + ' Kg'"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1" id="Olympedia">
-            <div class="col-2">Olympedia Link</div>
-            <div class="col-10" data-bind="text: Url"></div>
-        </div>
+
+        <div class="cardDetails mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+                <div class="col-md-11">
+                    <a data-bind="attr: {href: Photo}"><img data-bind="attr: {src: Photo}" class="img-fluid rounded"
+                            alt="...">
+                    </a>
+                </div>
+                <div class="col-md-1">
+                    <div class="card-body ps-3 " style="width: 600px;">
+
+
+                        <h5 class="card-title "><b> Athlete Informations</b></h5>
+                        <div class="row bodyDetails">
+                            <div class="row  mx-0 my-1">
+                                <div class="col-2">Id</div>
+                                <div class="col-10" data-bind="text: Id"></div>
+                            </div>
+                            <div class="row border-bottom mx-0  my-1">
+                                <div class="col-2">Name</div>
+                                <div class="col-10" data-bind="text: Name"></div>
+                            </div>
+                            <div class="row border-bottom mx-0  my-1">
+                                <div class="col-2">Sex</div>
+                                <div class="col-10" id="sex"></div>
+                            </div>
+                            <div class="row border-bottom mx-0  my-1" id="Height">
+                                <div class="col-2">Height</div>
+                                <div class="col-10" data-bind="text: Height() + ' cm'"></div>
+                            </div>
+                            <div class="row border-bottom mx-0  my-1 " id="Weight">
+                                <div class="col-2">Weight</div>
+                                <div class="col-10" data-bind="text: Weight() + ' Kg'"></div>
+                            </div>
+                            <div class="row border-bottom mx-0  my-1" id="Olympedia">
+                                <div class="col-2">Olympedia Link</div>
+                                <div class="col-10" data-bind="text: Url"></div>
+                            </div>
+                        </div>
 
 
 
 
-        <!-- <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Country Name</div>
-            <div class="col-10" data-bind="text: CountryName"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Season</div>
-            <div class="col-10" data-bind="text: Season"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Year</div>
-            <div class="col-10" data-bind="text: Year"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1" data-bind="visible: Logo() != '' && Logo() != null">
-            <div class="col-2">Logo</div>
-            <div class="small col-10">
-                <img class="img-thumbnail" data-bind="attr:{src: Logo}"><br /><i class="fa fa-link"></i><br />
-                [<a class="link-dark text-decoration-none" data-bind="attr: { href: Logo }, text: Logo"
-                    target="_blank"></a>]
-            </div>
-        </div> -->
-        <div class="row border-bottom mx-0  my-1" data-bind="visible: Photo() != '' && Photo() != null">
-            <div class="col-2">Photo</div>
-            <div class="small col-10">
-                <img class="img-thumbnail" data-bind="attr:{src: Photo}"><br />
-                <i class="fa fa-link"></i> [<a class="link-dark text-decoration-none"
-                    data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>]
+                    </div>
+                </div>
             </div>
         </div>
+
+
+
+
+
+
+
         <!-- /ko -->
         <a href="./athletes.html" class="btn btn-default btn-sm small"><i class="fa fa-list"></i> Back to List</a>
         <a data-bind="attr: { href:'./athletesFull.html?id=' + Id() }" class="btn btn-default btn-sm small"><i
-                class="fa fa-th"></i> Full Setails</a>
+                class="fa fa-th"></i> Full Details</a>
     </div>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
