--- a/HTML/athletesFull.html
+++ b/HTML/athletesFull.html
@@ -58,7 +58,7 @@
         </div>
         <div class="row border-bottom mx-0  my-1">
             <div class="col-2">Sex</div>
-            <div class="col-10" data-bind="text: Sex"></div>
+            <div class="col-10" id="sex"></div>
         </div>
         <div class="row border-bottom mx-0  my-1" id="Height">
             <div class="col-2">Height</div>
