--- a/HTML/index.html
+++ b/HTML/index.html
@@ -69,6 +69,8 @@
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="favoritos.html"><i
                                 class="fa fa-heart-o text-danger"></i> Favorites</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutus.html"><i
+                                class="fa fa-address-book-o text-danger"></i> About us</a></li>
                 </ul>
 
                 <div class="Toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
