--- a/HTML/modalities.html
+++ b/HTML/modalities.html
@@ -87,7 +87,7 @@
         <div class="row" data-bind=" foreach: records">
             <div class="col-md-3 col-sm-6 col-lg-3" style="margin:0 0 20px 0">
 
-                <div class="card h-100">
+                <div class="card cardAnimated h-100">
                     <img data-bind="attr:{src: Photo}" class="card-img-top cardImage" alt="Image Error" />
                     <div class="card-body text-center">
                         <h5 class="card-title text-center" data-bind="text:Name + ' ['+ Id + ']'   "></h5>
