--- a/HTML/athletesDetails.html
+++ b/HTML/athletesDetails.html
@@ -75,7 +75,7 @@
                     <div class="col-2">Sex</div>
                     <div class="col-10" id="sex"></div>
                 </div>
-                <div class="row border-bottom mx-0  my-1 infos">
+                <div class="row border-bottom mx-0  my-1 infos age">
                     <div class="col-2">Age</div>
                     <div class="col-10" id="age"></div>
                 </div>
