--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -130,8 +130,9 @@
             <tbody data-bind="foreach: records">
                 <tr>
                     <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Sex"></td>
+                    <td class="align-middle"><a href="" style="text-decoration:none; color:black"
+                            data-bind="text: Name, attr: {href:'./athletesDetails.html?id=' + Id }"></a></td>
+                    <td class="align-middle" data-bind="text:Sex" id="sex"></td>
                     <td class="text-end">
                         <a class="btn btn-default btn-light btn-xs"
                             data-bind="attr: { href:'./athletesDetails.html?id=' + Id }">
