--- a/HTML/athletesFull.html
+++ b/HTML/athletesFull.html
@@ -86,7 +86,7 @@
             </div>
         </div>
         <!-- /ko -->
-        <a href="./games.html" class="btn btn-default btn-sm small"><i class="fa fa-list"></i> Back to List</a>
+        <a href="./athletes.html" class="btn btn-default btn-sm small"><i class="fa fa-list"></i> Back to List</a>
 
     </div>
     <!-- Modal -->
