--- a/HTML/countries.html
+++ b/HTML/countries.html
@@ -83,38 +83,31 @@
         </div>
         <!-- /ko -->
 
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">IOC</th>
-                    <th scope="col">Flag</th>
 
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody data-bind="foreach: records">
-                <tr>
-                    <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:IOC"></td>
-                    <td><img class="flag"
-                            data-bind="attr:{src: Flag}, event : { mouseover: $parent.flagMouseOver, mouseout: $parent.flagMouseOut}">
-                    </td>
-                    <td class="text-end">
-                        <a class="btn btn-default btn-light btn-xs"
+
+        <div class="row" data-bind=" foreach: records">
+            <div class="col-md-3 col-sm-6 col-lg-3" style="margin:0 0 20px 0">
+
+                <div class="card cardAnimated h-100">
+                    <img data-bind="attr:{src: Flag}" class="card-img-top cardImage" alt="Image Error" />
+                    <div class="card-body text-center">
+                        <h5 class="card-title text-center" data-bind="text:Name + ' ' + IOC">
+                        </h5>
+
+                        <a class="stretched-link btn btn-default btn-light btn-sm"
                             data-bind="attr: { href:'./gameDetails.html?id=' + Id }">
                             <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
                         </a>
-                        <button class="btn btn-default btn-xs">
+                        <button class="btn btn-default btn-sm ">
                             <i class="fa fa-heart-o" data-bind="attr : { 'id': 'favourite_' + Id }"
                                 title="Selecione para adicionar aos favoritos"></i>
                         </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
     <!-- Modal -->
